# pool

./: .gitignore  README.md  pyproject.toml
src/pool/: __init__.py  cuda.py  cuda_maxpool.cpp  maxpool.cu  naive.py
tests/: test_backprop.py  test_inference.py  test_performance.py  test_performance_backprop.py  util.py
