[project]
name = "pool"
version = "0.1.0"
description = "An optimized implementation of KNN pooling in pytorch"
readme = "README.md"
authors = [
    { name = "Jackson Campolattaro", email = "jackson.campolattaro@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-benchmark>=5.1.0",
    "torch-geometric>=2.6.1",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
]
